@@ -1,6 +1,6 @@
 Package: ENmix
-Version: 1.22.4
-Date: 2019-10-09
+Version: 1.22.6
+Date: 2020-04-09
 Title: Data preprocessing and quality control for Illumina
    HumanMethylation450 and MethylationEPIC BeadChip
 Type: Package
@@ -29,11 +29,13 @@ Description: The ENmix package provides a set of quality control and data
     structure using principal component regression analysis plot; preparation
     of experimental factors related surrogate control variables
     to be adjusted in downstream
-    statistical analysis; and an efficient algorithm oxBS-MLE to estimate
-    5-methylcytosine and 5-hydroxymethylcytosine level.
+    statistical analysis; an efficient algorithm oxBS-MLE to estimate
+    5-methylcytosine and 5-hydroxymethylcytosine level; estimation of celltype 
+    proporitons; methlation age calculation and differentially methylated 
+    region (DMR) analysis.
 Depends: parallel,doParallel,foreach,SummarizedExperiment,stats
 Imports: grDevices,graphics,preprocessCore,matrixStats,methods,utils,irr,
-    geneplotter,impute,minfi,RPMM,illuminaio,dynamicTreeCut,
+    geneplotter,impute,minfi,RPMM,illuminaio,dynamicTreeCut,IRanges,
     Biobase,ExperimentHub,AnnotationHub,genefilter,gplots,quadprog,S4Vectors
 Suggests: minfiData, RUnit, BiocGenerics
 biocViews: DNAMethylation, Preprocessing, QualityControl, TwoChannel, Microarray,
