@@ -1,0 +1,42 @@
+
+p.qqplot<-function(pvalues,outf="qq.jpg",draw.conf=TRUE,
+        conf.col="lightgray",conf.alpha=.95,pch=20,col="black")
+{
+
+    conf.alpha=1-conf.alpha
+    ## Calculate lambda
+    lambda <- qchisq(median(pvalues,na.rm=T), df = 1, lower.tail = F)/qchisq(0.5, 1)
+    cat("\nThe genomic inflation factor lambda=",lambda,"\n")
+
+    pvalues=pvalues[!is.na(pvalues)]
+    if(!is.numeric(pvalues)){stop("pvalues is not a numeric vector")}
+    if(min(pvalues)<=0){stop("Some pvalues is less or equal to 0")}
+    if(max(pvalues)>1){stop("Some pvalues is greater than 1")}
+
+    n=length(pvalues)+1
+    exp.x <- -log10((1:(n-1))/n)
+    pvalues <- sort(-log10(pvalues))
+
+    if(draw.conf){
+        conf.points = n-1;
+        cpts<-matrix(nrow=conf.points*2, ncol=2)
+        for(i in seq(from=1, to=conf.points)) {
+           cpts[i,1]<- -log10((i)/n)
+           cpts[i,2]<- -log10(qbeta(1-conf.alpha/2, i, n-i))
+           cpts[conf.points*2+1-i,1]<- -log10((i)/n)
+           cpts[conf.points*2+1-i,2]<- -log10(qbeta(conf.alpha/2, i, n-i))
+        }
+    }
+
+    xlab=expression(Expected~~-log[10](italic(P))~~"under NULL hypothesis")
+    ylab=expression(Observed~~-log[10](italic(P)))
+
+    jpeg(outf,width=600,height=600,quality = 100)
+    par(mar=c(5.1, 5.1, 4.1, 2.1))
+    plot(NULL, xlim=c(0,max(exp.x)), ylim=c(0,max(pvalues)), xlab=xlab,ylab=ylab,cex.lab=1.3)
+    if(draw.conf){polygon(x=cpts[,1],y=cpts[,2], col="lightgray", lty=0)}
+    points(exp.x,pvalues,pch=pch,col=col)
+    abline(0,1,lty=2)
+    dev.off()
+}
+
